source/main.scss
@use "sass:map";
@import "root";

/* Resets */

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    appearance: none;
    -ms-appearance: none;
    -moz-appearance: none;
    -webkit-appearance: none;
}

html {
    height: 100%;
    background-color: var(--color-page-special);
    color: var(--color-text);
    font-family: var(--font-family-regular);
    scroll-behavior: smooth;
}

body {
    min-height: 100%;
    padding: 0;
    margin: 0;
}

header {
    border-top-left-radius: 0 !important;
    border-top-right-radius: 0 !important;
}

footer {
    border-bottom-left-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: var(--font-family-heading);
    color: var(--color-text-special);
}

label {
    user-select: none;
    font-size: var(--font-size-small);
}

a {
    color: var(--color-accent);
    text-decoration: none;
    transition-delay: 0ms;
    transition-duration: var(--hover-transition-duration);
    transition-property: color;
    transition-timing-function: ease;
}

a:hover {
    color: var(--color-accent-special);
}

img {
    width: 100%;
}

hr {
    display: block;
    width: 100%;
    height: 1px;
    background-color: var(--color-border);
    border: none;
}

ul,
ol {
    padding-left: var(--space-medium);
    list-style-position: inside;
}

/* Layout */

.stack {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: flex-start;
    align-items: stretch;
    align-content: flex-start;
    gap: var(--space-small);
}

.rack {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: flex-start;
    align-items: stretch;
    align-content: flex-start;
    gap: var(--space-small);
}

.row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: stretch;
    align-items: stretch;
    align-content: stretch;
    gap: var(--space-small);
}

.column {
    flex: 1 1 0;
}

@each $alignment in $alignments {
    .align-#{$alignment} {
        align-items: $alignment;
    }
}

@each $justification in $justifications {
    .justify-#{$justification} {
        justify-content: $justification;
    }
}

@each $position in $positions {
    .position-#{$position} {
        position: $position;
    }
}

@each $display in $displays {
    .display-#{$display} {
        display: $display;
    }
}

.breathable {
    padding: var(--space-small);
}

.breathable-horizontal {
    padding: 0 var(--space-small) 0 var(--space-small);
}

.breathable-vertical {
    padding: var(--space-small) 0 var(--space-small) 0;
}

.no-gap {
    gap: 0;
}

.no-wrap {
    flex-wrap: nowrap;
}

.no-text-wrap {
    white-space: nowrap;
}

.input-container {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: flex-start;
    align-items: stretch;
    align-content: flex-start;
    gap: var(--space-smaller);
}

.checkbox-container,
.radio-container {
    display: grid;
    grid-template-columns: 0fr 1fr;
    align-items: center;
    justify-items: left;
    gap: var(--space-small);
}

.checkbox-container>label,
.radio-container>label,
.checkbox-container>input,
.radio-container>input {
    cursor: pointer;
}

// Tables

table {
    border-collapse: collapse;
    background-color: var(--color-input);
    border-radius: var(--border-radius);
}

table thead td,
table thead th,
table tfoot th,
table tfoot td {
    background-color: var(--color-accent);
    padding-left: var(--space-small);
    padding-right: var(--space-small);
    color: var(--color-page);
}

// table>*:first-child>tr:first-child>th:first-child,
// table>*:first-child>tr:first-child>td:first-child {
//     border-top-left-radius: var(--border-radius);
// }

// table>*:first-child tr:first-child>th:last-child,
// table>*:first-child tr:first-child>td:last-child {
//     border-top-right-radius: var(--border-radius);
// }

// table>*:last-child>tr:last-child>th:first-child,
// table>*:last-child>tr:last-child>td:first-child {
//     border-bottom-left-radius: var(--border-radius);
// }

// table>*:last-child>tr:last-child>th:last-child,
// table>*:last-child>tr:last-child>td:last-child {
//     border-bottom-right-radius: var(--border-radius);
// }

table th,
table td {
    padding: var(--space-smaller);
    text-align: center;
}

table tr:nth-child(odd) {
    background-color: var(--color-input-special);
}

.scrollable-table-container {
    position: relative;
    display: flex;
    flex-flow: column nowrap;
    align-items: stretch;
    justify-content: stretch;
    overflow: auto;
}

.scrollable-table-container>table>thead {
    position: sticky;
    top: 0;
}

.scrollable-table-container>table>tfoot {
    position: sticky;
    bottom: 0;
}

.force-border-radius {
    border-radius: var(--border-radius);
    overflow: hidden;
}

@each $size in $sizes {

    .width-#{$size} {
        width: var(--width-#{$size});
    }

    .maximum-width-#{$size} {
        max-width: var(--width-#{$size});
    }

    .minimum-width-#{$size} {
        min-width: var(--width-#{$size});
    }

    .height-#{$size} {
        height: var(--height-#{$size});
    }

    .maximum-height-#{$size} {
        max-height: var(--height-#{$size});
    }

    .minimum-height-#{$size} {
        min-height: var(--height-#{$size});
    }

    .maximum-height-#{$size} {
        max-height: var(--height-#{$size});
    }

    .weight-#{$size} {
        flex-grow: var(--weight-#{$size});
    }

    .font-size-#{$size} {
        font-size: var(--font-size-#{$size});
    }

    .font-weight-#{$size} {
        font-weight: var(--font-weight-#{$size});
    }

}

.width-full,
.expanding-width {
    width: 100%;
}

.height-full,
.expanding-height {
    height: 100%;
}

.contracting-width {
    width: 0;
}

.contracting-height {
    height: 0;
}
/* ... */

